<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical">

    <TextView android:text="@string/portfolio_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="32sp" />

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            android:id="@+id/button_spotify"
            android:padding="20dp"
            android:textSize="16sp"
            android:background="#0091EA"
            android:layout_margin="5dp"
            android:textColor="#FAFAFA"
            android:onClick="onClickButtonSpotifyStreamer"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores_app"
            android:id="@+id/button_scores"
            android:padding="20dp"
            android:textSize="16sp"
            android:background="#0091EA"
            android:layout_margin="5dp"
            android:textColor="#FAFAFA" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            android:id="@+id/button_library"
            android:padding="20dp"
            android:textSize="16sp"
            android:background="#0091EA"
            android:layout_margin="5dp"
            android:textColor="#FAFAFA" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_bigger"
            android:id="@+id/button_build_bigger"
            android:padding="20dp"
            android:textSize="16sp"
            android:background="#0091EA"
            android:layout_margin="5dp"
            android:textColor="#FAFAFA" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            android:id="@+id/button_reader"
            android:padding="20dp"
            android:textSize="16sp"
            android:background="#0091EA"
            android:layout_margin="5dp"
            android:textColor="#FAFAFA" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone_project"
            android:id="@+id/button_capstone"
            android:padding="20dp"
            android:textSize="16sp"
            android:background="#ffe65100"
            android:textColor="#fffafafa"
            android:layout_margin="5dp" />
    </LinearLayout>

</LinearLayout>
